[gd_scene load_steps=2 format=3 uid="uid://ryw6brtbp7rv"]

[ext_resource type="Script" path="res://Scripts/UI/LocalLobby.gd" id="1_m33va"]

[node name="LocalLobby" type="Control"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -323.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_m33va")

[node name="ChatContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -161.0
grow_horizontal = 0
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="ChatContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChatDisplay" type="RichTextLabel" parent="ChatContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ChatContainer"]
layout_mode = 2

[node name="InputField" type="LineEdit" parent="ChatContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="ChatContainer/HBoxContainer"]
layout_mode = 2
text = "Enviar"

[node name="BackButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 57.0
grow_vertical = 0
text = "Volver"

[node name="PlayerInfo" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -44.0
offset_bottom = 23.0
grow_horizontal = 0
text = "{player_name}"

[node name="PlayersContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 402.0
offset_bottom = 157.0

[node name="GridContainer" type="GridContainer" parent="PlayersContainer"]
layout_mode = 2
columns = 3

[node name="Player1_name" type="Label" parent="PlayersContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Nombre"
horizontal_alignment = 1

[node name="Player2_name" type="Label" parent="PlayersContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Nombre"
horizontal_alignment = 1

[node name="Player3_name" type="Label" parent="PlayersContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Nombre"
horizontal_alignment = 1

[node name="Player4_name" type="Label" parent="PlayersContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Nombre"
horizontal_alignment = 1

[node name="Player5_name" type="Label" parent="PlayersContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Nombre"
horizontal_alignment = 1

[node name="Player6_name" type="Label" parent="PlayersContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Nombre"
horizontal_alignment = 1

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
